basic MVP, no 3 letters, no rest

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">EasySearch</string>
+    <string name="edittext_hint">Start typing username...</string>
 </resources>
