--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">EasySearch</string>
-    <string name="edittext_hint">Start typing username...</string>
+    <string name="edittext_hint">Start typing location...</string>
 </resources>
